# image-convert-service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: image-convert.yml
kubernetes/: image-convert.service.yml
src/: main.py  my_service.py
